<resources>
    <string name="app_name">Energigas</string>
    <string name="default_values_name">Steve</string>
    <string name="default_values_count_products">2</string>
    <string name="default_values_count_tanks">6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuraciones</string>
    <string name="action_print">Imprimir</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_image_description">Logo Energigas</string>
    <string name="login_action_login">Iniciar Sesión</string>
    <string name="login_message_notaccount">¿No tiene una cuenta?</string>
    <string name="wizard_title_activity">Mago</string>
    <string name="wizard_title_name">%1$s, nuestro Mago te guiará en el proceso de Despacho.</string>
    <string name="wizard_tabtitle_name">Selecciona un Tanque:</string>
    <string name="wizard_text_products_count">%1$d Productos, %2$d Tanques.</string>
    <string name="dispatch_name">Despacho</string>
    <string name="dispatch_title_name">Tanque 1</string>
    <string name="dispatch_station_name">
        "Agropacking Export S.A.\n"
        "Est. Piura - Piura"
    </string>
    <string name="dispatch_product_name">PRODUCTO: GLP</string>
    <string name="dispatch_contometer">Contómetro</string>
    <string name="dispatch_button_requested">Despachar</string>
    <string name="dispatch_button_read_contometer">Contómetro</string>
    <string name="dispatch_hint_requested_quantity">Cantidad Solicitada</string>
    <string name="dispatch_hint_dispensed_quantity">Cantidad Despachada</string>
    <string name="dispatch_hint_quantity_initial">Contómetro Inicial</string>
    <string name="dispatch_hint_quantity_final">Contómetro Final</string>
    <string name="dispatch_hint_tank_initial_percent">% Tanque Inicial</string>
    <string name="dispatch_hint_tank_final_percent">% Tanque Final</string>
    <string name="ordered_product_title_name">Productos</string>
    <string name="ordered_dispatch_title_name">Despachos</string>
    <string name="estb_title_name">Plan</string>
    <string name="order_title_name">Pedidos</string>
    <string name="plan_title_name">BSC</string>
    <string name="expenses_title_name">Gastos</string>
    <string name="collect_title_name">Cobranzas</string>
    <string name="collect_title_inventory">Cargar Orden</string>
    <string name="bluetooth_title_name">Configurar Bluetooth</string>
    <string name="summary_title_name">Resumen</string>
    <string name="action_close_account">Cerrar Cuenta</string>
    <string name="action_close_session">Cerrar Sessión</string>
    <string name="action_abous_us">Acerca de</string>
    <string name="nav_item_account">Cuenta</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_order">Prioridad Alta</string>
    <string name="print_orden_carga_empresa">
        " %1$s \n"
        " %2$s \n"
        " %3$s \n"
        " %4$s "
    </string>
        <string name="print_orden_carga">
        " Razón Social: %1$s \n"
        "RUC: %2$s \n"
        "Nro Comprobante: %3$s \n"
        "Nro Guia: %4$s \n"
        "Fecha Creación: %5$s \n"
        "Fecha Acción: %6$s \n"
    </string>
      <string name="print_info_orden_carga_body1">
          " UNIDAD DE MEDIDAD\t\t\t\t\t\t\t\t\t\t:\n"
          "CANTIDAD\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
          "FACTOR DE CONVERSION\t\t\t\t\t\t\t:\n"
          "DENSIDAD\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
          "PRECIO\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
    </string>
       <string name="print_resp_orden_carga_body1">
          " %1$s \n"
          " %2$s \n"
          " %3$s \n"
          " %4$s \n"
          " %5$s \n"
    </string>
     <string name="print_info_orden_carga_trasciego">
          " Cantidad\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
          "Unidad de Medidad\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
          "Factor Conversión\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
          "Densidad\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
          "Precio\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
    </string>
      <string name="print_resp_orden_carga_body1_trasciego">
          " %1$s \n"
          " %2$s \n"
          " %3$s \n"
          " %4$s \n"
          " %5$s \n"

    </string>
    <string name="print_orden_carga_trasciego">
        " Tipo de Origen: %1$s \n"
        "Producto: %2$s \n"
        "Nro Guia: %3$s \n"
        "Fecha Creación: %4$s \n"
        "Fecha Acción: %5$s \n"
    </string>
    <string name="string_info_orden_compra">
        " Razón Social:%1$s\n"
        "Ruc:%2$s\n"
        "Producto:%3$s\n"
        "Fecha de Acción:%4$s\n"
        "NrGuia:%5$s"
    </string>
    <string name="string_info_orden_trasciego">
        " Tipo de Origen:%1$s\n"
        "Producto:%2$s\n"
        "Fecha de Acción:%3$s\n"
        "NrGuia:%4$s\n"
    </string>
    <string name="print_despacho_empresa">
        " %1$s \n"
        " %2$s \n"
        " %3$s \n"
        " %4$s "
    </string>
   <string name="print_resp_dispatch_hora_inicio_fin">
          "\t\t\tHora Inicio\t\t\t\t\t:\t  %1$s\n"
       "\t\t\tHora Fin\t\t\t\t\t\t:\t  %2$s"
    </string>
    <string name="print_info_despacho">
        " Nombre\t\t\t\t:%1$s\n"
        "Dirección\t\t\t:%2$s\n"
        "Instalación\t\t:%3$s\n"
        "Coordenadas\t:%4$s \n"
        "Placa\t\t\t\t\t\t:%5$s \n"
        "Agente\t\t\t\t\t:%6$s \n"
        "Cliente\t\t\t\t\t:%7$s \n"
        "NroDespacho\t:%8$s \n"
    </string>
    <string name="print_info_dispatch_body1">
        " Contador Inicial\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t :\n"
        "Porcentaje Inicial\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t :\n"
        "Serie Tanque\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t :\n"
        "Nro Transporte\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t :\n"
    </string>
     <string name="print_resp_dispatch_body1">
          " %1$s \n"
          " %2$s \n"
          " %3$s \n"
          " %4$s \n"
    </string>
   <string name="print_info_dispatch_feet1">
          "RECIBIDO POR:\n\n"
       "NOMBRE\t\t\t: ________________________________ \n \n"
       "DNI\t\t\t\t\t\t\t:\t_______________________________\n \n"
       "FIRMA POR\t\t: ________________________________ \n \n"
    </string>
      <string name="print_dispatch_cantidad">
          "Cantidad Depachada\t(%1$s)\t\t:\t%2$s    "
    </string>
   <string name="print_info_dispatch_feet2">
       "          Documento sin valor tributario       \n"
       "          Consulte este documento en        \n"
       "           www.energigas.com          \n \n"
    </string>
      <string name="print_info_dispatch_body2">
        " Contador Final\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
        "Porcentaje Tanque Final\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
        "capacidad de Tanque\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t:\n"
    </string>
       <string name="print_resp_dispatch_body2">
          " %1$s \n"
          " %2$s \n"
          " %3$s \n"
    </string>
    <string name="print_factura_empresa">
        " %1$s \n"
        " %2$s "
    </string>
    <string name="cabecerca_titulo_resumen">
        " RESUMEN DEL DÍA \n"
    </string>
    <string name="print_factura_header">
        " CLIENTE  : %1$s \n"
        "DNI/RUC  : %2$s \n"
        "DIRECCION: %3$s "
    </string>
      <string name="print_factura_header_resumen">
        "AGENTE           : %1$s \n"
        "LIQUIDACION : %2$s \n"
        "FECHA             : %3$s \n"
    </string>
     <string name="print_factura_detalle_resumen">
         "SALDO INICIAL           :  S/.           %1$s \n"
         "INGRESOS TOTALES:  S/.           %2$s \n"
         "EN EFECTIVO             :  S/.           %3$s \n"
         "GASTOS TOTALES    :  S/.           %4$s \n"
         "TOTAL A RENDIR       :  S/.           %5$s \n"
    </string>
     <string name="text_detalle_ingresos">
         "%1$-10s"
    </string>
     <string name="print_detalle_ingresos_items">
         " %1$s \n"
         " ----------------------------------------------------------------------------------------\n"
         " <b> %2$s </b>\n"
    </string>
    <string name="print_factura_items">
        " %1$s \n"
        "OP. GRAVADA\t\t\t\tS/.\n"
        "OP. INAFECTA\t\t\tS/.\n"
        "OP. EXONERADA\t\tS/.\n"
        "OP. GRATUITA\t\t\tS/.\n"
        "DESCUENTOS\t\t\tS/.\n"
        "I.G.V.\t\t\t\t\t\t\t\t\tS/.\n\n"
        "PRECIO VENTA\t\t\tS/.\n"
    </string>
    <string name="print_factura_items_importe">
        " %1$s\n"
        " %2$s\n"
        " %3$s\n"
        " %4$s\n"
        " %5$s\n"
        " %6$s\n"
        " %7$s\n"
        "----------\n"
        " %8$s"
    </string>
    <string name="print_factura_operaciones">
        "OP. GRAVADA     S/.\n"
        "OP. INAFECTA    S/.\n"
        "OP. EXONERADA   S/.\n"
        "OP. GRATUITA    S/.\n"
        "DESCUENTOS      S/.\n"
        "I.G.V.          S/.\n\n"
        "PRECIO VENTA    S/.\n"
    </string>
    <string name="print_factura_operaciones_monto">
        "7542.37\n"
        "0.00\n"
        "0.00\n"
        "0.00\n"
        "0.00\n"
        "1357.63\n"
        "_________\n"
        "8900.00"
    </string>
   <string name="print_factura_footer">

        " %1$s \n"
        "AGENTE: %2$s \n\n"
        "V. Resumen: %3$s  \n\n"
        "<b>REPRESENTACION IMPRESA DE LA FACTURA DE VENTA ELECTRONICA</b>\n"
        "Visualice este documento en:\n"
        "<u> %4$s </u>"
    </string>
    <string name="print_factura_telefono">
        " Telf:\t%1$s"
    </string>
    <string name="print_factura_ruc">
        " R.U.C.:%1$s"
    </string>
    <string name="print_factura_imei">
        "IMEI:%1$s"
    </string>
    <string name="print_factura_fecha">
        " FECHA:%1$s"
    </string>
    <string name="print_factura_num">
        "Nº:%1$s"
    </string>
    <string name="print_factura_items2">
        " OP. GRAVADA\t\t\t\tS/.\n"
        "OP. INAFECTA\t\t\t\tS/.\n"
        "OP. EXONERADA\t\t\tS/.\n"
        "OP. GRATUITA\t\t\t\tS/.\n"
        "DESCUENTOS\t\t\t\tS/.\n"
        "I.G.V.\t\t\t\t\t\t\t\t\t\tS/.\n\n"
        "IMPORTE TOTAL\t\t\tS/."
    </string>
    <string name="print_factura_items_importe2">
        " %1$s\n"
        " %2$s\n"
        " %3$s\n"
        " %4$s\n"
        " %5$s\n"
        " %6$s\n"
        "----------\n"
        " %7$s"
    </string>
    <string name="main_dialog_text_km_start">Kilometraje inicial</string>
    <string name="main_dialog_text_weight_start">Peso inicial</string>
    <string name="main_dialog_text_percent_start">Porcentaje inicial</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_new_expense">Add new Expense</string>
    <string name="optional_description">Descripción (Opcional)</string>
    <string name="total">Total</string>
    <string name="title_activity_settings">Preferencias</string>
</resources>