<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_station"
            android:icon="@drawable/ic_calendar"
            android:tint="@color/colorAccent"
            android:title="@string/estb_title_name" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_heat"
            android:tint="@color/colorAccent"
            android:title="@string/plan_title_name" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_repairing_car"
            android:tint="@color/colorAccent"
            android:title="@string/expenses_title_name" />
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_hand_cash"
            android:tint="@color/colorAccent"
            android:title="@string/collect_title_inventory" />
        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_bluetooth_black_24dp"
            android:tint="@color/colorAccent"
            android:title="@string/bluetooth_title_name" />


    </group>
    <item android:title="@string/nav_item_account">
        <menu>
            <item
                android:checkable="false"
                android:id="@+id/nav_summary"
                android:icon="@drawable/ic_reporting"
                android:tint="@color/colorAccent"
                android:title="@string/summary_title_name" />
            <item
                android:checkable="false"
                android:id="@+id/nav_close_account"
                android:icon="@drawable/ic_close_white_24dp"
                android:tint="@color/colorAccent"
                android:title="@string/action_close_account" />

        </menu>
    </item>
    <item android:title="@string/title_activity_settings">
        <menu>

            <item
                android:checkable="false"
                android:id="@+id/nav_close_session"
                android:icon="@drawable/ic_close_white_24dp"
                android:tint="@color/colorAccent"
                android:title="@string/action_close_session" />
            <item
                android:visible="false"
                android:checkable="false"
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_sync"
                android:tint="@color/colorAccent"
                android:title="@string/title_activity_settings" />
            <item
                android:visible="false"
                android:checkable="false"
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_black_24dp"
                android:tint="@color/colorAccent"
                android:title="@string/action_abous_us" />
        </menu>
    </item>


</menu>