<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputlayout_requested_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_requested_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dispatch_hint_requested_quantity"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/inputlayout_requested_quantity"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/inputlayout_requested_quantity"
            android:layout_centerInParent="true"
            android:id="@+id/btnDistpach"
            android:text="@string/dispatch_button_requested" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewContometer"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dispatch_contometer"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true" />

        <android.support.v7.widget.AppCompatButton
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonContometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textViewContometer"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignRight="@+id/textViewContometer"
            android:layout_centerInParent="true"
            android:text="@string/dispatch_button_read_contometer" />
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_dispensed_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dispatch_hint_dispensed_quantity"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_quantity_initial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dispatch_hint_quantity_initial"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_quantity_final"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dispatch_hint_quantity_final"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_tank_initial_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dispatch_hint_tank_initial_percent"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_tank_final_percent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dispatch_hint_tank_final_percent"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>