<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/textKmStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_dialog_text_km_start"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/textWeightStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_dialog_text_weight_start"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/textPercentStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_dialog_text_percent_start"
            />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>